--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,14 +14,31 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    environment: prod
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
+      - name: Setup ssh authorization
+        env:
+          PRIVATE_KEY: ${{secrets.PRIVATE_KEY}}
+          PUBLIC_KEY: ${{secrets.PUBLIC_KEY}}
+          run: |
+            mkdir -p ~/.ssh
+            chmod 700 ~/.ssh
+            echo "$PUBLIC_KEY" | tr -d '\r' > ~/.ssh/id_rsa.pub
+            chmod 644 ~/.ssh/id_rsa.pub
+            echo "$PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
+            chmod 600 ~/.ssh/id_rsa
+            eval $(ssh-agent -s)
+            echo SSH agent started
+            ssh-add ~/.ssh/id_rsa
+            ssh-keyscan -H 'github.com' >> ~/.ssh/known_hosts
+            ssh-keyscan ${{secrets.HOST}} >> ~/.ssh/known_hosts
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
