--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,12 +40,7 @@ jobs:
           ssh-keyscan -H 'github.com' >> ~/.ssh/known_hosts
           ssh-keyscan ${{secrets.HOST}} >> ~/.ssh/known_hosts
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Update
+        run: ssh ${{secrets.USERNAME}}@${{secrets.HOST}} "cd lab-tw-2b4 && git pull"
+      - name: Cleanup
+        run: rm -rf ~/.ssh
